@@ -1,8 +1,3 @@
-- Introduce interface via static function calls to the ValueCache class, so it
-  can be hold by ndhist directly as member (without the need for a shared
-  pointer). This eliminates the need for an explicit copy constructor for
-  ValueCache.
-
 - Implement clear() method, that sets all bin content values to zero.
 
 - Implement the ndhist.copy() method that creates a deep copy of the ndhist
