@@ -478,13 +478,6 @@ class ndhist
         return bc_class_;
     }
 
-    template <typename WeightValueType>
-    detail::ValueCache<WeightValueType> &
-    get_value_cache()
-    {
-        return *static_cast< detail::ValueCache<WeightValueType> * >(value_cache_.get());
-    }
-
     /**
      * @brief Checks if this ndhist object shares the bin content array with an
      *     other ndhist object, i.e. does not own the data.
@@ -599,7 +592,7 @@ class ndhist
      */
     bp::object const bc_class_;
 
-    boost::shared_ptr<detail::ValueCacheBase> value_cache_;
+    detail::ValueCacheBase value_cache_;
 
     boost::function<void (ndhist &, ndhist const &)> iadd_fct_;
     boost::function<void (ndhist &, bn::ndarray const &)> idiv_fct_;
@@ -779,9 +772,6 @@ struct specific_nd_traits<ND>
             );
             iter.init_full_iteration();
 
-            // Get a handle on the value cache.
-            ValueCache<BCValueType> & value_cache = self.get_value_cache<BCValueType>();
-
             // Do the iteration.
             std::vector<intptr_t> indices(ND, 0);
             std::vector<intptr_t> relative_indices(ND, 0);
@@ -898,14 +888,14 @@ struct specific_nd_traits<ND>
                             // need to extent the axes and fill the cached
                             // values in.
                             value_cached = true;
-                            if(value_cache.push_back(relative_indices, weight))
+                            if(self.value_cache_.push_back(relative_indices, &weight))
                             {
                                 //std::cout << "The stack is full. Flush it." << std::endl<<std::flush;
                                 self.extend_axes(f_n_extra_bins_vec, b_n_extra_bins_vec);
                                 self.extend_bin_content_array(f_n_extra_bins_vec, b_n_extra_bins_vec);
                                 bc_data_offset = self.bc_.get_bytearray_data_offset() + self.bc_.calc_first_shape_element_data_offset();
 
-                                flush_value_cache<BCValueType>(self, value_cache, f_n_extra_bins_vec, bc_data_offset);
+                                flush_value_cache<BCValueType>(self, self.value_cache_, f_n_extra_bins_vec, bc_data_offset);
 
                                 memset(&f_n_extra_bins_vec.front(), 0, ND*sizeof(intptr_t));
                                 memset(&b_n_extra_bins_vec.front(), 0, ND*sizeof(intptr_t));
@@ -946,13 +936,13 @@ struct specific_nd_traits<ND>
             } while(iter.next());
 
             // Fill the remaining cached values.
-            if(value_cache.get_size() > 0)
+            if(self.value_cache_.get_size() > 0)
             {
                 self.extend_axes(f_n_extra_bins_vec, b_n_extra_bins_vec);
                 self.extend_bin_content_array(f_n_extra_bins_vec, b_n_extra_bins_vec);
                 bc_data_offset = self.bc_.get_bytearray_data_offset() + self.bc_.calc_first_shape_element_data_offset();
 
-                flush_value_cache<BCValueType>(self, value_cache, f_n_extra_bins_vec, bc_data_offset);
+                flush_value_cache<BCValueType>(self, self.value_cache_, f_n_extra_bins_vec, bc_data_offset);
             }
         }
     };
